--- a/distserve/evaluation/Dockerfile.evaluation
+++ b/distserve/evaluation/Dockerfile.evaluation
@@ -9,7 +9,7 @@ RUN --mount=type=cache,target=/var/cache/apt \
     --mount=type=cache,target=/var/lib/apt/lists \
     sed -ri.bak -e 's/\/\/.*?(archive.ubuntu.com|mirrors.*?)\/ubuntu/\/\/mirrors.pku.edu.cn\/ubuntu/g' -e '/security.ubuntu.com\/ubuntu/d' /etc/apt/sources.list && \
     apt update && \
-    apt install -y --no-install-recommends git cmake build-essential openmpi-bin openmpi-common libopenmpi-dev curl
+    apt install -y --no-install-recommends git cmake build-essential openmpi-bin openmpi-common libopenmpi-dev curl libaio-dev
 
 # Install micromamba
 RUN curl -Ls https://micro.mamba.pm/api/micromamba/linux-64/latest | tar -xvj bin/micromamba && \
@@ -54,6 +54,7 @@ RUN --mount=type=cache,target=/root/.cache/pip \
 
 # Install vLLM
 # Assume that its source code locates at distserve/evaluation/vllm
+# Make sure it is on the correct branch (distserve-baseline-vllm)
 COPY --exclude=distserve/evaluation/vllm/build distserve/evaluation/vllm /app/vllm
 RUN --mount=type=cache,target=/app/vllm/build \
     eval "$(micromamba shell hook --shell bash)" && \
@@ -103,13 +104,16 @@ RUN --mount=type=cache,target=/app/SwiftTransformer/build \
 # Here we need openssh-server to enable SSH service for runpod
 RUN --mount=type=cache,target=/var/cache/apt \
     --mount=type=cache,target=/var/lib/apt/lists \
+    --mount=type=cache,target=/root/.cache/pip \
     apt update && \
-    apt install -y --no-install-recommends nano vim sudo wget fish openssh-server lsof zip unzip btop tree && \
+    apt install -y --no-install-recommends nano vim sudo wget fish openssh-server lsof zip unzip btop tree psmisc && \
     echo "alias conda=micromamba" | tee -a /root/.bashrc | tee -a /root/.config/fish/config.fish && \
     echo "alias mamba=micromamba" | tee -a /root/.bashrc | tee -a /root/.config/fish/config.fish && \
-    echo 'SWIFT_TRANSFORMER_LIB_PATH="/app/SwiftTransformer/libst_pybinding.so"' >> /etc/environment && \
-    echo 'EXP_RESULT_ROOT="/workspace/exp-results"' >> /etc/environment && \
-    echo 'RAY_DEDUP_LOGS=0' >> /etc/environment && \
+    echo 'export SWIFT_TRANSFORMER_LIB_PATH="/app/SwiftTransformer/libst_pybinding.so"' >> /app/envvars && \
+    echo 'export EXP_RESULT_ROOT="/workspace/exp-results"' >> /app/envvars && \
+    echo 'export RAY_DEDUP_LOGS=0' >> /app/envvars && \
+    echo '. /app/envvars' >> /root/.bashrc && \
+    echo '. /app/envvars' >> /root/.config/fish/config.fish && \
     eval "$(micromamba shell hook --shell bash)" && \
     micromamba activate distserve && \
     pip install nvitop matplotlib ipykernel
